<resources>
    <string name="app_name">MovieCollection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_information_available">No information available.</string>
    <string name="empty_recycler_view_no_network">The network is not available. Please check the internet connectivity.</string>
    <string name="action_share">Share</string>
    <string name="action_play">Play</string>
    <string name="action_home">Home</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nevigation_drawer">NevigationDrawerActivity</string>
    <string name="iamgenotavaliable">No Image</string>

  <!--  <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>-->
    <string name="nevi_title_popular">Popular</string>
    <string name="nevi_title_toprated">Top Rated</string>
    <string name="nevi_title_upcoming">Upcoming</string>
    <string name="nevi_title_nowplaying">Now Playing</string>
    <string name="nevi_title_favorite">Favorite</string>
    <!--<string name="popular">popularity.desc</string>
    <string name="toprated">vote_average.desc</string>
    <string name="upcoming">upcoming.desc</string>
    <string name="nowplaying">Nowplaying.desc</string>-->
    <string name="popular">popular</string>
    <string name="toprated">top_rated.desc</string>
    <string name="upcoming">upcoming</string>
    <string name="nowplaying">now_playing</string>
    <string name="favorite">Favorite</string>
    <string name="similar">Similar</string>
    <string name="review_text">Review Not Avalible</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>


<!--String Relateed to content Description-->
    <string name="PageSwitcher">Switch pages here</string>
    <string name="poster_description">The Poster of the movie</string>
    <string name="title_description">The Title of the movie</string>
    <string name="originaltitel_description">The Original Title of the movie</string>
    <string name="releasedate_description">Release Date of Movie</string>
    <string name="votecount_description">Vote count of movie</string>
    <string name="voteaverage_description">Average Rating of Movie</string>
    <string name="genre_description">Genre of  Movie</string>
    <string name="overview_description">Overview of Movie </string>
    <string name="review_description"> Review of Movie</string>
    <string name="trailerplay_description">Play The Movie Trailer</string>
    <string name="share_description">Share the Movie</string>
    <string name="favorite_description">Save Movie as a favorite</string>


    <!-- Strings related to Widgets -->
    <string name="title_widget_movie">Movie Collection</string>
   <!-- Banner add unit id-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
